--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,12 @@
-alembic==1.11.1
-asgiref==3.6.0
-autopep8==2.0.0
-bidict==0.22.0
-blinker==1.7.0
-cachelib==0.9.0
-certifi==2022.12.7
-cffi==1.15.1
-chardet==5.2.0
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-cs50==9.2.2
-DateTime==5.1
-distlib==0.3.6
-Django==4.2.1
-django-bootstrap5==23.1
-django-widget-tweaks==1.4.12
-et-xmlfile==1.1.0
-filelock==3.9.0
-Flask==3.0.3
-Flask-Excel==0.0.7
-Flask-Login==0.6.2
-Flask-Migrate==4.0.4
-Flask-Script==2.0.6
-Flask-Session==0.8.0
-Flask-SocketIO==5.3.2
-Flask-Sockets==0.2.1
-Flask-SQLAlchemy==3.0.3
-Flask-WTF==1.1.1
-fuzzywuzzy==0.18.0
-gevent==22.10.2
-gevent-websocket==0.10.1
 glfw==2.7.0
-greenlet==2.0.0.post0
-helpers==0.2.0
-idna==3.4
-install==1.3.5
-itsdangerous==2.1.2
-Jinja2==3.1.2
-lml==0.1.0
-lxml==4.9.3
-Mako==1.2.4
-markdown2==2.4.10
-MarkupSafe==2.1.1
-msgspec==0.18.6
-mysql-connector-python==8.0.33
-openpyxl==3.1.2
-Pillow==10.1.0
-platformdirs==3.1.1
-protobuf==3.20.3
-psycopg2-binary==2.9.5
-pycodestyle==2.9.1
-pycparser==2.21
-pyexcel==0.7.0
-pyexcel-io==0.6.6
-pyexcel-webio==0.1.4
-pyexcel-xlsx==0.6.0
+Panda3D==1.10.14
+panda3d-gltf==1.2.0
+panda3d-simplepbr==0.12.0
+pillow==10.3.0
 pygame==2.5.2
-pyglet==2.0.15
 PyOpenGL==3.1.7
 PyOpenGL-accelerate==3.1.7
-python-docx==1.1.0
-python-dotenv==0.21.0
-python-engineio==4.3.4
-python-socketio==5.7.2
-pytz==2022.7.1
-reportlab==4.0.7
-requests==2.28.2
-SQLAlchemy==1.4.43
-sqlparse==0.4.3
-temp==2020.7.2
-termcolor==2.1.0
-texttable==1.7.0
-tomli==2.0.1
-typing_extensions==4.5.0
-tzdata==2023.3
-urllib3==1.26.15
-virtualenv==20.20.0
-Werkzeug==3.0.2
-WTForms==3.0.1
-zope.event==4.5.0
-zope.interface==5.5.2
+pyperclip==1.8.2
+screeninfo==0.8.1
+typing_extensions==4.11.0
+ursina==7.0.0
