--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 glfw==2.7.0
+numpy==1.26.4
 Panda3D==1.10.14
 panda3d-gltf==1.2.0
 panda3d-simplepbr==0.12.0
 pillow==10.3.0
 pygame==2.5.2
+PyGLM==2.7.1
 PyOpenGL==3.1.7
 PyOpenGL-accelerate==3.1.7
 pyperclip==1.8.2
