--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+ffpyplayer==4.5.1
 glcontext==2.5.0
 glfw==2.7.0
 moderngl==5.10.0
@@ -9,6 +10,7 @@ pillow==10.3.0
 pyassimp==5.2.5
 pygame==2.5.2
 PyGLM==2.7.1
+pymediainfo==6.1.0
 PyOpenGL==3.1.7
 PyOpenGL-accelerate==3.1.7
 pyperclip==1.8.2
